APP/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onify-app
  labels:
    app: onify
    tier: app
spec:
  selector:
    matchLabels:
      app: onify
      tier: app
  template:
    metadata:
      labels:
        app: onify
        tier: app
    spec:
      imagePullSecrets:
      - name: onify-regcred
      containers:
      - name: app
        image: eu.gcr.io/onify-images/hub/app:2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1000Mi"
            cpu: "500m"
          limits:
            memory: "2000Mi"
            cpu: "2"
        ports:
        - name: app
          containerPort: 3000
