APP/ohjelmistojakelu-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ohjelmistojakelu
  namespace: onify-ext
  labels:
    type: external
spec:
  host: ohjelmistojakelu.helsinki.fi
  to:
    kind: Service
    name: onify-app
    weight: 100
  port:
    targetPort: onify-app2
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIIvjCCBqagAwIBAgIRAKtf9n1PP/9af2mHWR83xN4wDQYJKoZIhvcNAQEMBQAw
[...]
      r9Y8CMokTUhF+V6N9A53VO06R/1Rilv6E4xaXlWzTKlOeA==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      removed
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEMjCCAxqgAwIBAgIBATANBgkqhkiG9w0BAQUFADB7MQswCQYDVQQGEwJHQjEb
[...]
      smPi9WIsgtRqAEFQ8TmDn5XpNpaYbg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFgTCCBGmgAwIBAgIQOXJEOvkit1HX02wQ3TE1lTANBgkqhkiG9w0BAQwFADB7
[...]
      vGp4z7h/jnZymQyd/teRCBaho1+V
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIG5TCCBM2gAwIBAgIRANpDvROb0li7TdYcrMTz2+AwDQYJKoZIhvcNAQEMBQAw
[...]
      Ipwgu2L/WJclvd6g+ZA/iWkLSMcpnFb+uX6QBqvD6+RNxul1FaB5iHY=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
