APP/onify-https-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: onify-dev-app-https
  namespace: onify
spec:
  host: onify-dev.apps.ocp-prod-0.k8s.it.helsinki.fi
  to:
    kind: Service
    name: onify-app
    weight: 100
  port:
    targetPort: onify-app
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
